--- a/src/features/timer/subcomponents/Contestant/Contestant.module.scss
+++ b/src/features/timer/subcomponents/Contestant/Contestant.module.scss
@@ -96,5 +96,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    white-space: nowrap;
   }
 }
